# examples

./: .gitignore  Dockerfile  settings.gradle
clean-architecture-with-practice/: README.md  package-lock.json  package.json
concurrency/: .gitignore  CreateAccountDetailEntity.ts  CreateAccountEntity.ts  README.md  docker-compose.yml  ecosystem.config.js  index.ts  init.ts  package.json  purchase.test.ts  purchaseNoTransaction.test.ts  purchaseNoTransaction.ts  purchasePessimisticLock.test.ts  purchasePessimisticLock.ts  purchasePessimisticLock2.test.ts  purchasePessimisticLock2.ts  purchaseReadCommitted.test.ts  purchaseReadCommitted.ts  purchaseRepeatableRead.test.ts  purchaseRepeatableRead.ts  purchaseSerializable.test.ts  purchaseSerializable.ts  tsconfig.json
concurrency2/: .gitignore  README.md  clear.ts  docker-compose-monitoring.yml  docker-compose.yml  ecosystem.config.js  package.json  pnpm-lock.yaml  seed.sql  seed.ts  tempo.yml
css/: box.html  index.html
csv-reader/: index.ts  package-lock.json  package.json
ddd-start/: biome.json  docker-compose.yml  package-lock.json  package.json
di-container/: jest.config.js  package-lock.json  package.json  tsconfig.json
express-example/: docker-compose.yml  index.test.ts  (+4 more)
langchain-practice/: README.md  docker-compose.yml  main.py  pyproject.toml
langchain-practice/embedding/: openai_embedding.ipynb
langchain-practice/loader/: asyncchromiumloader.ipynb  customdataloader.ipynb  webbaseloader.ipynb
langchain-practice/rag/: simple_rag.ipynb
langchain-practice/vectorstore/postgres/: command.py  query.py
(+608 files in other folders)
