[project]
name = "langchain-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-postgres>=0.0.15",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "tiktoken>=0.11.0",
]
